# mc_schems

./: Cargo.toml  README.md
src/: lib.rs  sponge.rs
tests/: sponge.rs  sponge_v2.schem  sponge_v3.schem
