[package]
name = "mc_schems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This fork has a reworked Blob structure
hematite-nbt = { git = "https://github.com/StackDoubleFlow/hematite_nbt.git" }
thiserror = "1.0.58"
